Fixed notification alignment (#3645)

--- a/client/app/assets/less/ant.less
+++ b/client/app/assets/less/ant.less
@@ -254,9 +254,9 @@
 
 // flexible width for notifications
 .@{notification-prefix-cls} {
-  width: auto;
-
-  &-notice {
-    padding-right: 48px;
+  // vertical centering
+  &-notice-close {
+    top: 20px;
+    right: 20px;
   }
 }
